Implementacion inicio de sesion con google

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -63,6 +63,7 @@
 
 .comment-form-inline {
     display: flex;
+    flex-direction: column;
     align-items: center;
     gap: 15px;
     width: 100%;
