--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,20 @@
 }
 
 .main-content-wrapper {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    
+    /* ESTILOS QUE DEFINEN EL MARCO DE LA APP */
+    max-width: 420px;
+    width: 100%;
+    margin: 0 auto;
+    border-left: 1px solid #eee;
+    border-right: 1px solid #eee;
+    box-shadow: 0 0 25px rgba(0,0,0,0.05);
+    background-color: #f9f9f9;
 }
+
 
 .app-content {
   flex-grow: 1;
